// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleDropdown should render correctly 1`] = `
.c0 {
  width: 100%;
  min-width: 6rem;
  position: relative;
  border-radius: 3px;
}

.c0::after {
  content: '';
  position: absolute;
  right: 10px;
  top: 50%;
  margin-top: -5px;
  z-index: 1;
  text-align: center;
  width: 0;
  height: 0;
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-top: 8px solid #545456;
  pointer-events: none;
}

.c1 {
  position: relative;
  width: 100%;
  color: #545456;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  font-weight: 300;
  text-transform: none;
  font-style: normal;
  border-radius: 0.3rem;
  cursor: pointer;
  outline: none;
  text-align: left;
  padding: 0.4rem 0;
  box-sizing: border-box;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#10ADE4",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownArrowColor": "#545456",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "footerCategoryColor": "#040d25",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "inputPlaceholderColor": "#999B9E",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "navbarDropdownContentBackgroundColor": "#FFF",
      "navbarDropdownContentBorderColor": "#999B9E",
      "navbarDropdownContentShadowColor": "rgba(0,0,0,0.25)",
      "navbarDropdownContentShadowColor2": "rgba(0,0,0,0.10)",
      "navbarDropdownDescriptionColor": "#999B9E",
      "navbarDropdownHeaderColor": "#FFF",
      "navbarDropdownTitleColor": "#3558A8",
      "navbarDropdownTitleMobileColor": "#FFF",
      "navbarMenuBagroundColor": "#004A7C",
      "navbarTogglerColor": "#FFF",
      "paginationBackgroundColor": "rgba(0, 0, 0, 0)",
      "paginationBorderColor": "#EEF2F5",
      "paginationColor": "#383838",
      "paginationHoverBackgroundColor": "rgba(16,173,228,0.1)",
      "paginationHoverColor": "#383838",
      "paginationSelectedBackgroundColor": "#10ADE4",
      "paginationSelectedColor": "#FFF",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha10": "rgba(0,0,0,0.10)",
        "blackAlpha25": "rgba(0,0,0,0.25)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "ceruleanAlpha10": "rgba(16,173,228,0.1)",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "rgba(0, 0, 0, 0)",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
      "togglerBackgroundColor": "#FFF",
      "togglerBorderColor": "#EEF2F5",
      "togglerColor": "#10ADE4",
      "togglerSelectedBackgroundColor": "#10ADE4",
      "togglerSelectedColor": "#FFF",
      "tooltipBackgroundColor": "#383838",
      "tooltipBorderColor": "#383838",
      "tooltipColor": "#FFF",
    }
  }
>
  <SingleDropdown
    capitalize={false}
    italic={false}
    items={
      Array [
        Object {
          "text": "Item1",
          "value": 1,
        },
        Object {
          "text": "Item2",
          "value": 2,
        },
        Object {
          "text": "Item3",
          "value": 3,
        },
        Object {
          "text": "Item4",
          "value": 4,
        },
        Object {
          "text": "Item5",
          "value": 5,
        },
        Object {
          "text": "Item6",
          "value": 6,
        },
        Object {
          "text": "Item7",
          "value": 7,
        },
        Object {
          "text": "Item8",
          "value": 8,
        },
        Object {
          "text": "Item9",
          "value": 9,
        },
      ]
    }
    onChange={[MockFunction]}
    size="1rem"
    uppercase={false}
    weight={300}
    width="100%"
  >
    <styled.div
      width="100%"
    >
      <div
        className="c0"
        width="100%"
      >
        <styled.select
          capitalize={false}
          italic={false}
          onChange={[MockFunction]}
          size="1rem"
          uppercase={false}
          weight={300}
        >
          <select
            className="c1"
            onChange={[MockFunction]}
            size="1rem"
          >
            <option
              key="1"
              value={1}
            >
              Item1
            </option>
            <option
              key="2"
              value={2}
            >
              Item2
            </option>
            <option
              key="3"
              value={3}
            >
              Item3
            </option>
            <option
              key="4"
              value={4}
            >
              Item4
            </option>
            <option
              key="5"
              value={5}
            >
              Item5
            </option>
            <option
              key="6"
              value={6}
            >
              Item6
            </option>
            <option
              key="7"
              value={7}
            >
              Item7
            </option>
            <option
              key="8"
              value={8}
            >
              Item8
            </option>
            <option
              key="9"
              value={9}
            >
              Item9
            </option>
          </select>
        </styled.select>
      </div>
    </styled.div>
  </SingleDropdown>
</ThemeProvider>
`;

exports[`SingleDropdown should render correctly with capitalize 1`] = `
.c0 {
  width: 100%;
  min-width: 6rem;
  position: relative;
  border-radius: 3px;
}

.c0::after {
  content: '';
  position: absolute;
  right: 10px;
  top: 50%;
  margin-top: -5px;
  z-index: 1;
  text-align: center;
  width: 0;
  height: 0;
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-top: 8px solid #545456;
  pointer-events: none;
}

.c1 {
  position: relative;
  width: 100%;
  color: #545456;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  font-weight: 300;
  text-transform: capitalize;
  font-style: normal;
  border-radius: 0.3rem;
  cursor: pointer;
  outline: none;
  text-align: left;
  padding: 0.4rem 0;
  box-sizing: border-box;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#10ADE4",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownArrowColor": "#545456",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "footerCategoryColor": "#040d25",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "inputPlaceholderColor": "#999B9E",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "navbarDropdownContentBackgroundColor": "#FFF",
      "navbarDropdownContentBorderColor": "#999B9E",
      "navbarDropdownContentShadowColor": "rgba(0,0,0,0.25)",
      "navbarDropdownContentShadowColor2": "rgba(0,0,0,0.10)",
      "navbarDropdownDescriptionColor": "#999B9E",
      "navbarDropdownHeaderColor": "#FFF",
      "navbarDropdownTitleColor": "#3558A8",
      "navbarDropdownTitleMobileColor": "#FFF",
      "navbarMenuBagroundColor": "#004A7C",
      "navbarTogglerColor": "#FFF",
      "paginationBackgroundColor": "rgba(0, 0, 0, 0)",
      "paginationBorderColor": "#EEF2F5",
      "paginationColor": "#383838",
      "paginationHoverBackgroundColor": "rgba(16,173,228,0.1)",
      "paginationHoverColor": "#383838",
      "paginationSelectedBackgroundColor": "#10ADE4",
      "paginationSelectedColor": "#FFF",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha10": "rgba(0,0,0,0.10)",
        "blackAlpha25": "rgba(0,0,0,0.25)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "ceruleanAlpha10": "rgba(16,173,228,0.1)",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "rgba(0, 0, 0, 0)",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
      "togglerBackgroundColor": "#FFF",
      "togglerBorderColor": "#EEF2F5",
      "togglerColor": "#10ADE4",
      "togglerSelectedBackgroundColor": "#10ADE4",
      "togglerSelectedColor": "#FFF",
      "tooltipBackgroundColor": "#383838",
      "tooltipBorderColor": "#383838",
      "tooltipColor": "#FFF",
    }
  }
>
  <SingleDropdown
    capitalize={true}
    italic={false}
    items={
      Array [
        Object {
          "text": "Item1",
          "value": 1,
        },
        Object {
          "text": "Item2",
          "value": 2,
        },
        Object {
          "text": "Item3",
          "value": 3,
        },
        Object {
          "text": "Item4",
          "value": 4,
        },
        Object {
          "text": "Item5",
          "value": 5,
        },
        Object {
          "text": "Item6",
          "value": 6,
        },
        Object {
          "text": "Item7",
          "value": 7,
        },
        Object {
          "text": "Item8",
          "value": 8,
        },
        Object {
          "text": "Item9",
          "value": 9,
        },
      ]
    }
    onChange={[MockFunction]}
    size="1rem"
    uppercase={false}
    weight={300}
    width="100%"
  >
    <styled.div
      width="100%"
    >
      <div
        className="c0"
        width="100%"
      >
        <styled.select
          capitalize={true}
          italic={false}
          onChange={[MockFunction]}
          size="1rem"
          uppercase={false}
          weight={300}
        >
          <select
            className="c1"
            onChange={[MockFunction]}
            size="1rem"
          >
            <option
              key="1"
              value={1}
            >
              Item1
            </option>
            <option
              key="2"
              value={2}
            >
              Item2
            </option>
            <option
              key="3"
              value={3}
            >
              Item3
            </option>
            <option
              key="4"
              value={4}
            >
              Item4
            </option>
            <option
              key="5"
              value={5}
            >
              Item5
            </option>
            <option
              key="6"
              value={6}
            >
              Item6
            </option>
            <option
              key="7"
              value={7}
            >
              Item7
            </option>
            <option
              key="8"
              value={8}
            >
              Item8
            </option>
            <option
              key="9"
              value={9}
            >
              Item9
            </option>
          </select>
        </styled.select>
      </div>
    </styled.div>
  </SingleDropdown>
</ThemeProvider>
`;

exports[`SingleDropdown should render correctly with italic 1`] = `
.c0 {
  width: 100%;
  min-width: 6rem;
  position: relative;
  border-radius: 3px;
}

.c0::after {
  content: '';
  position: absolute;
  right: 10px;
  top: 50%;
  margin-top: -5px;
  z-index: 1;
  text-align: center;
  width: 0;
  height: 0;
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-top: 8px solid #545456;
  pointer-events: none;
}

.c1 {
  position: relative;
  width: 100%;
  color: #545456;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  font-weight: 300;
  text-transform: none;
  font-style: italic;
  border-radius: 0.3rem;
  cursor: pointer;
  outline: none;
  text-align: left;
  padding: 0.4rem 0;
  box-sizing: border-box;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#10ADE4",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownArrowColor": "#545456",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "footerCategoryColor": "#040d25",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "inputPlaceholderColor": "#999B9E",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "navbarDropdownContentBackgroundColor": "#FFF",
      "navbarDropdownContentBorderColor": "#999B9E",
      "navbarDropdownContentShadowColor": "rgba(0,0,0,0.25)",
      "navbarDropdownContentShadowColor2": "rgba(0,0,0,0.10)",
      "navbarDropdownDescriptionColor": "#999B9E",
      "navbarDropdownHeaderColor": "#FFF",
      "navbarDropdownTitleColor": "#3558A8",
      "navbarDropdownTitleMobileColor": "#FFF",
      "navbarMenuBagroundColor": "#004A7C",
      "navbarTogglerColor": "#FFF",
      "paginationBackgroundColor": "rgba(0, 0, 0, 0)",
      "paginationBorderColor": "#EEF2F5",
      "paginationColor": "#383838",
      "paginationHoverBackgroundColor": "rgba(16,173,228,0.1)",
      "paginationHoverColor": "#383838",
      "paginationSelectedBackgroundColor": "#10ADE4",
      "paginationSelectedColor": "#FFF",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha10": "rgba(0,0,0,0.10)",
        "blackAlpha25": "rgba(0,0,0,0.25)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "ceruleanAlpha10": "rgba(16,173,228,0.1)",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "rgba(0, 0, 0, 0)",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
      "togglerBackgroundColor": "#FFF",
      "togglerBorderColor": "#EEF2F5",
      "togglerColor": "#10ADE4",
      "togglerSelectedBackgroundColor": "#10ADE4",
      "togglerSelectedColor": "#FFF",
      "tooltipBackgroundColor": "#383838",
      "tooltipBorderColor": "#383838",
      "tooltipColor": "#FFF",
    }
  }
>
  <SingleDropdown
    capitalize={false}
    italic={true}
    items={
      Array [
        Object {
          "text": "Item1",
          "value": 1,
        },
        Object {
          "text": "Item2",
          "value": 2,
        },
        Object {
          "text": "Item3",
          "value": 3,
        },
        Object {
          "text": "Item4",
          "value": 4,
        },
        Object {
          "text": "Item5",
          "value": 5,
        },
        Object {
          "text": "Item6",
          "value": 6,
        },
        Object {
          "text": "Item7",
          "value": 7,
        },
        Object {
          "text": "Item8",
          "value": 8,
        },
        Object {
          "text": "Item9",
          "value": 9,
        },
      ]
    }
    onChange={[MockFunction]}
    size="1rem"
    uppercase={false}
    weight={300}
    width="100%"
  >
    <styled.div
      width="100%"
    >
      <div
        className="c0"
        width="100%"
      >
        <styled.select
          capitalize={false}
          italic={true}
          onChange={[MockFunction]}
          size="1rem"
          uppercase={false}
          weight={300}
        >
          <select
            className="c1"
            onChange={[MockFunction]}
            size="1rem"
          >
            <option
              key="1"
              value={1}
            >
              Item1
            </option>
            <option
              key="2"
              value={2}
            >
              Item2
            </option>
            <option
              key="3"
              value={3}
            >
              Item3
            </option>
            <option
              key="4"
              value={4}
            >
              Item4
            </option>
            <option
              key="5"
              value={5}
            >
              Item5
            </option>
            <option
              key="6"
              value={6}
            >
              Item6
            </option>
            <option
              key="7"
              value={7}
            >
              Item7
            </option>
            <option
              key="8"
              value={8}
            >
              Item8
            </option>
            <option
              key="9"
              value={9}
            >
              Item9
            </option>
          </select>
        </styled.select>
      </div>
    </styled.div>
  </SingleDropdown>
</ThemeProvider>
`;

exports[`SingleDropdown should render correctly with size 1`] = `
.c0 {
  width: 100%;
  min-width: 6rem;
  position: relative;
  border-radius: 3px;
}

.c0::after {
  content: '';
  position: absolute;
  right: 10px;
  top: 50%;
  margin-top: -5px;
  z-index: 1;
  text-align: center;
  width: 0;
  height: 0;
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-top: 8px solid #545456;
  pointer-events: none;
}

.c1 {
  position: relative;
  width: 100%;
  color: #545456;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 32px;
  font-weight: 300;
  text-transform: none;
  font-style: normal;
  border-radius: 0.3rem;
  cursor: pointer;
  outline: none;
  text-align: left;
  padding: 0.4rem 0;
  box-sizing: border-box;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#10ADE4",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownArrowColor": "#545456",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "footerCategoryColor": "#040d25",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "inputPlaceholderColor": "#999B9E",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "navbarDropdownContentBackgroundColor": "#FFF",
      "navbarDropdownContentBorderColor": "#999B9E",
      "navbarDropdownContentShadowColor": "rgba(0,0,0,0.25)",
      "navbarDropdownContentShadowColor2": "rgba(0,0,0,0.10)",
      "navbarDropdownDescriptionColor": "#999B9E",
      "navbarDropdownHeaderColor": "#FFF",
      "navbarDropdownTitleColor": "#3558A8",
      "navbarDropdownTitleMobileColor": "#FFF",
      "navbarMenuBagroundColor": "#004A7C",
      "navbarTogglerColor": "#FFF",
      "paginationBackgroundColor": "rgba(0, 0, 0, 0)",
      "paginationBorderColor": "#EEF2F5",
      "paginationColor": "#383838",
      "paginationHoverBackgroundColor": "rgba(16,173,228,0.1)",
      "paginationHoverColor": "#383838",
      "paginationSelectedBackgroundColor": "#10ADE4",
      "paginationSelectedColor": "#FFF",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha10": "rgba(0,0,0,0.10)",
        "blackAlpha25": "rgba(0,0,0,0.25)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "ceruleanAlpha10": "rgba(16,173,228,0.1)",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "rgba(0, 0, 0, 0)",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
      "togglerBackgroundColor": "#FFF",
      "togglerBorderColor": "#EEF2F5",
      "togglerColor": "#10ADE4",
      "togglerSelectedBackgroundColor": "#10ADE4",
      "togglerSelectedColor": "#FFF",
      "tooltipBackgroundColor": "#383838",
      "tooltipBorderColor": "#383838",
      "tooltipColor": "#FFF",
    }
  }
>
  <SingleDropdown
    capitalize={false}
    italic={false}
    items={
      Array [
        Object {
          "text": "Item1",
          "value": 1,
        },
        Object {
          "text": "Item2",
          "value": 2,
        },
        Object {
          "text": "Item3",
          "value": 3,
        },
        Object {
          "text": "Item4",
          "value": 4,
        },
        Object {
          "text": "Item5",
          "value": 5,
        },
        Object {
          "text": "Item6",
          "value": 6,
        },
        Object {
          "text": "Item7",
          "value": 7,
        },
        Object {
          "text": "Item8",
          "value": 8,
        },
        Object {
          "text": "Item9",
          "value": 9,
        },
      ]
    }
    onChange={[MockFunction]}
    size="32px"
    uppercase={false}
    weight={300}
    width="100%"
  >
    <styled.div
      width="100%"
    >
      <div
        className="c0"
        width="100%"
      >
        <styled.select
          capitalize={false}
          italic={false}
          onChange={[MockFunction]}
          size="32px"
          uppercase={false}
          weight={300}
        >
          <select
            className="c1"
            onChange={[MockFunction]}
            size="32px"
          >
            <option
              key="1"
              value={1}
            >
              Item1
            </option>
            <option
              key="2"
              value={2}
            >
              Item2
            </option>
            <option
              key="3"
              value={3}
            >
              Item3
            </option>
            <option
              key="4"
              value={4}
            >
              Item4
            </option>
            <option
              key="5"
              value={5}
            >
              Item5
            </option>
            <option
              key="6"
              value={6}
            >
              Item6
            </option>
            <option
              key="7"
              value={7}
            >
              Item7
            </option>
            <option
              key="8"
              value={8}
            >
              Item8
            </option>
            <option
              key="9"
              value={9}
            >
              Item9
            </option>
          </select>
        </styled.select>
      </div>
    </styled.div>
  </SingleDropdown>
</ThemeProvider>
`;

exports[`SingleDropdown should render correctly with uppercase 1`] = `
.c0 {
  width: 100%;
  min-width: 6rem;
  position: relative;
  border-radius: 3px;
}

.c0::after {
  content: '';
  position: absolute;
  right: 10px;
  top: 50%;
  margin-top: -5px;
  z-index: 1;
  text-align: center;
  width: 0;
  height: 0;
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-top: 8px solid #545456;
  pointer-events: none;
}

.c1 {
  position: relative;
  width: 100%;
  color: #545456;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  font-weight: 300;
  text-transform: uppercase;
  font-style: normal;
  border-radius: 0.3rem;
  cursor: pointer;
  outline: none;
  text-align: left;
  padding: 0.4rem 0;
  box-sizing: border-box;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#10ADE4",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownArrowColor": "#545456",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "footerCategoryColor": "#040d25",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "inputPlaceholderColor": "#999B9E",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "navbarDropdownContentBackgroundColor": "#FFF",
      "navbarDropdownContentBorderColor": "#999B9E",
      "navbarDropdownContentShadowColor": "rgba(0,0,0,0.25)",
      "navbarDropdownContentShadowColor2": "rgba(0,0,0,0.10)",
      "navbarDropdownDescriptionColor": "#999B9E",
      "navbarDropdownHeaderColor": "#FFF",
      "navbarDropdownTitleColor": "#3558A8",
      "navbarDropdownTitleMobileColor": "#FFF",
      "navbarMenuBagroundColor": "#004A7C",
      "navbarTogglerColor": "#FFF",
      "paginationBackgroundColor": "rgba(0, 0, 0, 0)",
      "paginationBorderColor": "#EEF2F5",
      "paginationColor": "#383838",
      "paginationHoverBackgroundColor": "rgba(16,173,228,0.1)",
      "paginationHoverColor": "#383838",
      "paginationSelectedBackgroundColor": "#10ADE4",
      "paginationSelectedColor": "#FFF",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha10": "rgba(0,0,0,0.10)",
        "blackAlpha25": "rgba(0,0,0,0.25)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "ceruleanAlpha10": "rgba(16,173,228,0.1)",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "rgba(0, 0, 0, 0)",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
      "togglerBackgroundColor": "#FFF",
      "togglerBorderColor": "#EEF2F5",
      "togglerColor": "#10ADE4",
      "togglerSelectedBackgroundColor": "#10ADE4",
      "togglerSelectedColor": "#FFF",
      "tooltipBackgroundColor": "#383838",
      "tooltipBorderColor": "#383838",
      "tooltipColor": "#FFF",
    }
  }
>
  <SingleDropdown
    capitalize={false}
    italic={false}
    items={
      Array [
        Object {
          "text": "Item1",
          "value": 1,
        },
        Object {
          "text": "Item2",
          "value": 2,
        },
        Object {
          "text": "Item3",
          "value": 3,
        },
        Object {
          "text": "Item4",
          "value": 4,
        },
        Object {
          "text": "Item5",
          "value": 5,
        },
        Object {
          "text": "Item6",
          "value": 6,
        },
        Object {
          "text": "Item7",
          "value": 7,
        },
        Object {
          "text": "Item8",
          "value": 8,
        },
        Object {
          "text": "Item9",
          "value": 9,
        },
      ]
    }
    onChange={[MockFunction]}
    size="1rem"
    uppercase={true}
    weight={300}
    width="100%"
  >
    <styled.div
      width="100%"
    >
      <div
        className="c0"
        width="100%"
      >
        <styled.select
          capitalize={false}
          italic={false}
          onChange={[MockFunction]}
          size="1rem"
          uppercase={true}
          weight={300}
        >
          <select
            className="c1"
            onChange={[MockFunction]}
            size="1rem"
          >
            <option
              key="1"
              value={1}
            >
              Item1
            </option>
            <option
              key="2"
              value={2}
            >
              Item2
            </option>
            <option
              key="3"
              value={3}
            >
              Item3
            </option>
            <option
              key="4"
              value={4}
            >
              Item4
            </option>
            <option
              key="5"
              value={5}
            >
              Item5
            </option>
            <option
              key="6"
              value={6}
            >
              Item6
            </option>
            <option
              key="7"
              value={7}
            >
              Item7
            </option>
            <option
              key="8"
              value={8}
            >
              Item8
            </option>
            <option
              key="9"
              value={9}
            >
              Item9
            </option>
          </select>
        </styled.select>
      </div>
    </styled.div>
  </SingleDropdown>
</ThemeProvider>
`;

exports[`SingleDropdown should render correctly with weight 1`] = `
.c0 {
  width: 100%;
  min-width: 6rem;
  position: relative;
  border-radius: 3px;
}

.c0::after {
  content: '';
  position: absolute;
  right: 10px;
  top: 50%;
  margin-top: -5px;
  z-index: 1;
  text-align: center;
  width: 0;
  height: 0;
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-top: 8px solid #545456;
  pointer-events: none;
}

.c1 {
  position: relative;
  width: 100%;
  color: #545456;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  font-weight: 500;
  text-transform: none;
  font-style: normal;
  border-radius: 0.3rem;
  cursor: pointer;
  outline: none;
  text-align: left;
  padding: 0.4rem 0;
  box-sizing: border-box;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#10ADE4",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownArrowColor": "#545456",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "footerCategoryColor": "#040d25",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "inputPlaceholderColor": "#999B9E",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "navbarDropdownContentBackgroundColor": "#FFF",
      "navbarDropdownContentBorderColor": "#999B9E",
      "navbarDropdownContentShadowColor": "rgba(0,0,0,0.25)",
      "navbarDropdownContentShadowColor2": "rgba(0,0,0,0.10)",
      "navbarDropdownDescriptionColor": "#999B9E",
      "navbarDropdownHeaderColor": "#FFF",
      "navbarDropdownTitleColor": "#3558A8",
      "navbarDropdownTitleMobileColor": "#FFF",
      "navbarMenuBagroundColor": "#004A7C",
      "navbarTogglerColor": "#FFF",
      "paginationBackgroundColor": "rgba(0, 0, 0, 0)",
      "paginationBorderColor": "#EEF2F5",
      "paginationColor": "#383838",
      "paginationHoverBackgroundColor": "rgba(16,173,228,0.1)",
      "paginationHoverColor": "#383838",
      "paginationSelectedBackgroundColor": "#10ADE4",
      "paginationSelectedColor": "#FFF",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha10": "rgba(0,0,0,0.10)",
        "blackAlpha25": "rgba(0,0,0,0.25)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "ceruleanAlpha10": "rgba(16,173,228,0.1)",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "rgba(0, 0, 0, 0)",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
      "togglerBackgroundColor": "#FFF",
      "togglerBorderColor": "#EEF2F5",
      "togglerColor": "#10ADE4",
      "togglerSelectedBackgroundColor": "#10ADE4",
      "togglerSelectedColor": "#FFF",
      "tooltipBackgroundColor": "#383838",
      "tooltipBorderColor": "#383838",
      "tooltipColor": "#FFF",
    }
  }
>
  <SingleDropdown
    capitalize={false}
    italic={false}
    items={
      Array [
        Object {
          "text": "Item1",
          "value": 1,
        },
        Object {
          "text": "Item2",
          "value": 2,
        },
        Object {
          "text": "Item3",
          "value": 3,
        },
        Object {
          "text": "Item4",
          "value": 4,
        },
        Object {
          "text": "Item5",
          "value": 5,
        },
        Object {
          "text": "Item6",
          "value": 6,
        },
        Object {
          "text": "Item7",
          "value": 7,
        },
        Object {
          "text": "Item8",
          "value": 8,
        },
        Object {
          "text": "Item9",
          "value": 9,
        },
      ]
    }
    onChange={[MockFunction]}
    size="1rem"
    uppercase={false}
    weight={500}
    width="100%"
  >
    <styled.div
      width="100%"
    >
      <div
        className="c0"
        width="100%"
      >
        <styled.select
          capitalize={false}
          italic={false}
          onChange={[MockFunction]}
          size="1rem"
          uppercase={false}
          weight={500}
        >
          <select
            className="c1"
            onChange={[MockFunction]}
            size="1rem"
          >
            <option
              key="1"
              value={1}
            >
              Item1
            </option>
            <option
              key="2"
              value={2}
            >
              Item2
            </option>
            <option
              key="3"
              value={3}
            >
              Item3
            </option>
            <option
              key="4"
              value={4}
            >
              Item4
            </option>
            <option
              key="5"
              value={5}
            >
              Item5
            </option>
            <option
              key="6"
              value={6}
            >
              Item6
            </option>
            <option
              key="7"
              value={7}
            >
              Item7
            </option>
            <option
              key="8"
              value={8}
            >
              Item8
            </option>
            <option
              key="9"
              value={9}
            >
              Item9
            </option>
          </select>
        </styled.select>
      </div>
    </styled.div>
  </SingleDropdown>
</ThemeProvider>
`;
